# velociraptor

./: .gitignore  CLAUDE.md  Dockerfile.embed-query  Dockerfile.neo4j-fulltext-search  Dockerfile.page-fetch  Dockerfile.recursive-mcp  Dockerfile.semantic-search  README.md  docker-compose.yml  env.docker.example  env.example  pyproject.toml  rawr  vr
.claude/: settings.local.json
src/velociraptor/: __init__.py
src/velociraptor/cli/: rawr  vr
src/velociraptor/db/: neo4j.py
src/velociraptor/llm/: anthropic.py  anthropic_mcp_client.py  gemini.py  gemini_mcp_client.py
src/velociraptor/mcp/: embed_query_mcp_server.py  mcp_client.py  neo4j_full_text_search_mcp.py  page_fetch_mcp.py  recursive_mcp.py  semantic_search_mcp.py
src/velociraptor/models/: __init__.py  attachment.py  chunk.py  conversation.py  document.py  edge.py  node.py  page.py  summary.py
src/velociraptor/prompts/: mcp_client_system_prompt.md  prompt.py  system_prompt.txt
src/velociraptor/scripts/: process_documents.py  rawr.py  vr.py
src/velociraptor/split/: pdf.py  text.py
src/velociraptor/splitters/: pdf_splitter.py
src/velociraptor/summarize/: summarize.py
src/velociraptor/utils/: __init__.py  context_manager.py  logger.py
