[project]
name = "velociraptor"
version = "0.1.0"
description = "A simple Python project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "PyMuPDF>=1.23.0",
    "neo4j~=5.28.1",
    "google-genai[aiohttp]>=1.26.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "langchain-text-splitters>=0.3.8",
    "aiofiles>=24.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true